# olive-legacy

./: .gitignore
src/: CMakeLists.txt  PartyConfig.h.in  party.cc
src/gfx/: flex.h  rect.h  vector2i.h
src/gui/: clip_style.h  flex_layout_window.cc  flex_layout_window.h  flex_view.h  layout_item_behavior.h  layout_window.cc  layout_window.h  main_window.cc  main_window.h  timeline_window.cc  timeline_window.h  window.cc  window.h
src/ui/: layer.h
